@@ -1,3 +1,10 @@
+2005-12-29 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b3
+
+ * New: Added 2 new options for highlight and thumbnail quality.
+        Users complained about new fix quality settings.
+
+   -> Config Version bump.
+
 2005-12-29 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b2
 
  * Fix: Missing quotation broke previous thumbs in microthumb nav.
